# done-with-it

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
done_with_it/: hooks.py
done_with_it/config/: desktop.py  docs.py
done_with_it/done_with_it/doctype/listing/: listing.js  listing.json  listing.py  test_listing.py
